save final result in part 2 to use it in part 3

--- a/scripts/second_part_c14bazAAR.Rmd
+++ b/scripts/second_part_c14bazAAR.Rmd
@@ -366,4 +366,5 @@ bawue_final <- bawue_calibrated %>%
   dplyr::do(head(., n = 1)) %>% 
   dplyr::ungroup()
 
+saveRDS(bawue_final, file = "bawue_final.RDS")
 ```
